# clipnotes

./: .gitignore  README.md  abstract2clip.py  abstract2clip.sh  catselect.py  catselect.sh  clip-question.py  clip-question.sh  clipnotes.cfg  clipnotes.py  clipnotes_gui.py  example-weak-to-strong-generalization.md  fetch-abstract.py  fetch-abstract.sh  final_catselect.sh  final_screenshot-imugr.sh  requirements.txt  run_tests.sh  screenshot-imugr.sh  selection_stitcher.py  setup.py  simple_clipnotes.py  test_clipnotes.py
.examples/: GPTScore-haiku-2.md  weak-to-strong-generalization.txt  weak-to-strong.md  weak-to-strong2.md  weak-to-strong3-gemini.md  weak-to-strong3-haiku-t0.md
.refactoring/: intermediate_abstract2clip.sh  intermediate_catselect.sh  intermediate_clip-question.sh  intermediate_clipnotes.py  intermediate_fetch-abstract.sh  intermediate_screenshot-imugr.sh  refactored_abstract2clip.sh  refactored_catselect.sh  refactored_clip-question.sh  refactored_clipnotes.py  refactored_fetch-abstract.sh  refactored_screenshot-imugr.sh  review_abstract2clip.sh.txt  review_catselect.sh.txt  review_clip-question.sh.txt  review_clipnotes.py.txt  review_fetch-abstract.sh.txt  review_screenshot-imugr.sh.txt
.refactoring/v1/: final_abstract2clip.sh  final_catselect.sh  final_clip-question.sh  intermediate_abstract2clip.sh  intermediate_catselect.sh  (+12 more)
clipnotes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
example/: GPTScore-haiku.md  GPTScore.txt
llm-clip-safari/: README.md  plugin.py  pyproject.toml
tests/: test_clipnotes.py
(+55 files in other folders)
